# freetype2-meson-old

./: meson.build
builds/meson/: ftconfig.in
src/: meson.build
src/autofit/: meson.build
src/base/: meson.build
src/bdf/: meson.build
src/bzip2/: meson.build
src/cache/: meson.build
src/cff/: meson.build
src/cid/: meson.build
src/gzip/: meson.build
src/lzw/: meson.build
src/pcf/: meson.build
src/pfr/: meson.build
src/psaux/: meson.build
src/pshinter/: meson.build
src/psnames/: meson.build
src/raster/: meson.build
src/sfnt/: meson.build
src/smooth/: meson.build
src/truetype/: meson.build
src/type1/: meson.build
src/type42/: meson.build
src/winfonts/: meson.build
